5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1621_2930.log
== TEST (2019-04-01 19:09:22) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9,81 
from math import*

L = g*(T / 2*math.pi)**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = g*(T / 2*math.pi)**2
NameError: name 'T' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:09:34) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9,81 
from math import*

L = g*(T / 2*math.pi)**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = g*(T / 2*math.pi)**2
NameError: name 'T' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:10:15) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9,81 
from math import*

L = g*(a / 2*math.pi)**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = g*(a / 2*math.pi)**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:10:46) 
-- CODE:
#a = float(input("periodo de oscilacao:"))
#g = 9,81 
from math import*

L = g*(a / 2*math.pi)**2
#print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = g*(a / 2*math.pi)**2
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:11:24) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = 9.81*(a / 2*math.pi)**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = 9.81*(a / 2*math.pi)**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:11:37) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = 9.81*(a / 2math.pi)**2
print(L)
-- ERROR:
File "XXXX", line 5
    L = 9.81*(a / 2math.pi)**2
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:11:55) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = 9.81*(5.0 / 2math.pi)**2
print(L)
-- ERROR:
File "XXXX", line 5
    L = 9.81*(5.0 / 2math.pi)**2
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:12:11) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = 9.81*(5.0 /math.pi)**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = 9.81*(5.0 /math.pi)**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:12:40) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*
L = 9.81*(5.0 / math.pi)**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    L = 9.81*(5.0 / math.pi)**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:14:34) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*
L = 9.81*( a / 2*math.pi)**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    L = 9.81*( a / 2*math.pi)**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:19:14) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = g*( a / 2*math.pi)**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = g*( a / 2*math.pi)**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:20) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = g*( a / 2*math.pi)**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = g*( a / 2*math.pi)**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:29) 
-- CODE:
a = int(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = g*( a / 2*math.pi)**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:21) 
-- CODE:
a = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = g*( a / 2*(math.pi))**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = g*( a / 2*(math.pi))**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:46:18) 
-- CODE:
T = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*
T = 

L = g*( T / 2*(math.pi))**2
print(L)
-- ERROR:
File "XXXX", line 4
    T = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:46:28) 
-- CODE:
T = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = g*( T / 2*(math.pi))**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = g*( T / 2*(math.pi))**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:25) 
-- CODE:
T = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = 9.81*( 5.0 / 2*(math.pi))**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = 9.81*( 5.0 / 2*(math.pi))**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:48:39) 
-- CODE:
T = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = 9.81*(25.00 / 4*(math.pi))
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = 9.81*(25.00 / 4*(math.pi))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:49:57) 
-- CODE:
T = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = 9.81*(25.00 / (math.pi * 4))
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = 9.81*(25.00 / (math.pi * 4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:50:21) 
-- CODE:
T = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = 9.81*(25.00 / (math.pi * 4))
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = 9.81*(25.00 / (math.pi * 4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:51:56) 
-- CODE:
T = float(input("periodo de oscilacao:"))
g = 9.81 
from math import*

L = 9.81*(5.0 / (math.pi * 2))**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    L = 9.81*(5.0 / (math.pi * 2))**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:52) 
-- CODE:

from math import*

L = 9.81*(5.0 / (math.pi * 2))**2
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    L = 9.81*(5.0 / (math.pi * 2))**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
